<resources>
    <string name="app_name">PropertyManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rent">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_tenant">Tenant</string>
    <string name="menu_document">Document</string>
    <string name="menu_property">Property</string>
    <string name="menu_todo">ToDo</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_vendor">Vendor</string>
    <string name="initial_text">0</string>
    <string name="this_is_random_string">initial_string</string>
    <string name="image_of_button">image of button</string>
    <string name="logo">logo</string>
    <string name="login">login</string>
    <string name="text_new_user">New user? Register</string>
    <string name="landlord">Landlord</string>
    <string name="manager">Manager</string>
    <string name="tenant">Tenant</string>
    <string name="vendor">Vendor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_register_login">Already register? Login</string>
    <string name="register">register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="referer_email">Referer email</string>
    <string name="collect_rent">Collect Rent</string>
    <string name="name">name</string>

    <string name="add_property">add property</string>
    <string name="delete_property">delete property</string>
    <string name="fab">fab</string>
    <string name="what_type_of_user_you_are">What type of user you are?</string>
    <string name="modify_property">modify property</string>
    <string name="step_1_property_address">Step 1: Property Address</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state_province">State/Province</string>
    <string name="country">Country</string>
    <string name="step_2_property_details">Step 2: Property Details</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="rent_status">Rent Status</string>
    <string name="mortaged">Mortaged</string>
    <string name="step_3_property_image">Step 3: Property Image</string>
    <string name="add_photo">add photo</string>
    <string name="take_photo">take photo</string>
    <string name="step_4_submit">Step 4: Submit</string>
    <string name="submit">submit</string>
    <string name="image_in_image_list">image_in_image_list</string>
    <string name="loading_image_from_api">"Loading Image from API"</string>
    <string name="cover_of_property">cover of property</string>
    <string name="loading_progress">loading progress</string>
    <string name="close">close</string>
    <string name="get_current_location">get current location</string>
    <string name="default_string">random string</string>
    <string name="Username">UserName</string>
    <string name="landlord_email">LandLord Email</string>
    <string name="you_finished_all_the_todos">You finished all the todos!</string>
    <string name="button_todo_detail">button todo detail</string>
    <string name="add_todo">Add Todo</string>
    <string name="enter_title">enter title</string>
    <string name="todo_detail_hint">enter detail or leave blank</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>