<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_document"
            android:icon="@drawable/ic_baseline_document_24"
            android:title="@string/menu_document" />
        <item
            android:id="@+id/nav_tenant"
            android:icon="@drawable/ic_baseline_tenant_24"
            android:title="@string/menu_tenant" />
        <item
            android:id="@+id/nav_rent"
            android:icon="@drawable/ic_baseline_collect_rent_24"
            android:title="@string/collect_rent" />
        <item
            android:id="@+id/nav_property"
            android:icon="@drawable/ic_baseline_property_24"
            android:title="@string/menu_property" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_baseline_todo_24"
            android:title="@string/menu_todo" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_baseline_transaction_24"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_vendor"
            android:icon="@drawable/ic_baseline_vendors_24"
            android:title="@string/menu_vendor" />
    </group>
</menu>