<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.property.PropertyAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_add_property_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_frame"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/step_1_property_address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="17sp">

            </EditText>

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="17sp">

            </EditText>

            <EditText
                android:id="@+id/edit_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_province"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="17sp">

            </EditText>

            <EditText
                android:id="@+id/edit_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="17sp">

            </EditText>
            <Button
                android:id="@+id/button_get_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_menu_camera"
                android:drawableTint="@color/white"
                android:text="get current location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_add_property_step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linear_add_property_step1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_frame"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/step_2_property_details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/purchase_price"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="17sp">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/checkbox_rent_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rent_status"
                    android:textSize="17sp">

                </CheckBox>

                <CheckBox
                    android:id="@+id/checkbox_mortage_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mortaged"
                    android:textSize="17sp">

                </CheckBox>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_add_property_step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_grey"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linear_add_property_step2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_frame"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/step_3_property_image"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <Button
                android:id="@+id/button_add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_menu_camera"
                android:drawableTint="@color/white"
                android:text="@string/add_photo" />

            <Button
                android:id="@+id/button_take_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_menu_camera"
                android:drawableTint="@color/white"
                android:text="@string/take_photo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_property_image_list"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:visibility="gone">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_add_property_step4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_add_property_step3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_frame"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/step_4_submit"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>


            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_menu_camera"
                android:drawableTint="@color/white"
                android:text="@string/submit"
                android:enabled="false"/>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>