<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.auth.register.RegisterNavigationFragment">

    <TextView
        android:id="@+id/text_type_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/what_type_of_user_you_are"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_register_landlord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <Button
        android:id="@+id/button_register_landlord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landlord"
        app:layout_constraintBottom_toTopOf="@id/button_register_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_type_user">

    </Button>

    <Button
        android:id="@+id/button_register_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        app:layout_constraintBottom_toTopOf="@id/button_register_tenant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register_landlord">

    </Button>

    <Button
        android:id="@+id/button_register_tenant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenant"
        app:layout_constraintBottom_toTopOf="@id/button_register_vendor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register_manager">

    </Button>

    <Button
        android:id="@+id/button_register_vendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register_tenant">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
