<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:background="@drawable/shape_frame"
    android:backgroundTint="@color/blue_grey">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/add_todo"
        android:id="@+id/text_add_todo"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:id="@+id/edit_todo_title"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:gravity="start"

        app:layout_constraintTop_toBottomOf="@+id/text_add_todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </EditText>
    <EditText
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:hint="@string/todo_detail_hint"
        android:id="@+id/edit_todo_detail"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        app:layout_constraintTop_toBottomOf="@+id/edit_todo_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_dialog_OK">
    </EditText>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/edit_todo_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_dialog_Cancel"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/button_dialog_OK">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/edit_todo_detail"
        app:layout_constraintStart_toEndOf="@id/button_dialog_OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/button_dialog_Cancel">
    </Button>




</androidx.constraintlayout.widget.ConstraintLayout>