<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_margin="15dp"
    android:background="@color/blue_grey"
    android:padding="15dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top|end"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@color/blue_grey"
                android:contentDescription="@string/image_in_image_list"
                android:scaleType="fitXY"
                android:visibility="gone">

            </ImageView>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_progress"
                android:textColor="@color/black"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>
    </FrameLayout>


</androidx.cardview.widget.CardView>