<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:padding="15dp"
    android:layout_margin="15dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/button_close"
            android:layout_margin="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="@color/black"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/close">
        </ImageButton>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linear_loading_section"
                android:orientation="vertical">
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:id="@+id/progress">
                </ProgressBar>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_progress"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/loading_progress">
                </TextView>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_property"
                android:contentDescription="@string/cover_of_property">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_price_title">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_location">
            </TextView>



        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>